[tool.poetry]
name = "tort"
version = "1.0.0"
description = "Library for running Python functions with timeout and retry support."
authors = ["KLMatlock <kevin.matlock@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.9b0"
bandit = "^1.7.0"
tox = "^3.24.4"
pytest = "^6.2.5"
isort = "^5.9.3"
tox-conda = "^0.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist =
    {py37, py38, py39}-{stable}

[testenv]
deps=pytest
commands=
    pytest {posargs}
"""